--- a/ayudantias/ayudantia_1/ayudantia_1.ipynb
+++ b/ayudantias/ayudantia_1/ayudantia_1.ipynb
@@ -140,7 +140,7 @@
     "x = 4\n",
     "y = 5.0\n",
     "print(\"x tiene valor\", x, \"y es de tipo\", type(x)) # La función type nos entrega el tipo de dato de una variable\n",
-    "print(\"y tiene valor\", x, \"y es de tipo\", type(y))\n",
+    "print(\"y tiene valor\", y, \"y es de tipo\", type(y))\n",
     "print(\"Suma:\", x+y)\n",
     "print(\"Resta:\", x-y)\n",
     "print(\"Multiplicación:\", x*y)\n",
@@ -301,7 +301,7 @@
     "- Listas (List)\n",
     "- Diccionarios (Dictionary)\n",
     "- Tuplas (Tuple)\n",
-    "- Conjuntos (Set)\\\n",
+    "- Conjuntos (Set)\n",
     "\n",
     "Pero por ahora solo veremos los primeros dos."
    ]
@@ -739,7 +739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Git es un sistema de control de versiones distribuido utilizado para rastrear cambios en el código fuente durante el desarrollo de software. Permite a múltiples desarrolladores colaborar en proyectos, llevar un registro de sus cambios y gestionar el historial del proyecto. \\\n",
+    "Git es un sistema de control de versiones distribuido utilizado para rastrear cambios en el código fuente durante el desarrollo de software. Permite a múltiples desarrolladores colaborar en proyectos, llevar un registro de sus cambios y gestionar el historial del proyecto. \n",
     "\n",
     "Conceptos clave:\n",
     "- Repositorio (Repo): Git almacena toda la información sobre un proyecto en una estructura de datos llamada repositorio. Incluye los archivos del proyecto y un registro de todos los cambios realizados en esos archivos.\n",
@@ -754,7 +754,7 @@
     "\n",
     "- Merge: Fusionar es el proceso de combinar los cambios de una rama en otra. Esto se hace típicamente para incorporar los cambios de una rama de características en el código base principal.\n",
     "\n",
-    "- Pull: Pull es el proceso de obtener cambios de un repositorio remoto y fusionarlos en tu repositorio local. Es una combinación de las operaciones de fetch y merge. MUY IMPORTANTE hacer un pull antes de crear una rama nueva, así nos aseguramos de tener la versión más actual del código y no tener que estar peleando después para resolver conflictos entre sus cambios y los que hizo alguien más.\n",
+    "- Pull: Pull es el proceso de obtener cambios de un repositorio remoto y fusionarlos en tu repositorio local. MUY IMPORTANTE hacer un pull antes de crear una rama nueva, así nos aseguramos de tener la versión más actual del código y no tener que estar peleando después para resolver conflictos entre sus cambios y los que hizo alguien más.\n",
     "\n",
     "- Push: Push es el proceso de subir tus cambios locales a un repositorio remoto. Esto hace que tus cambios estén disponibles para otros desarrolladores que trabajan en el proyecto.\n",
     "\n",
