add: proposed excercise

--- a/ayudantias/ayudantia_5/ayudantia_5.ipynb
+++ b/ayudantias/ayudantia_5/ayudantia_5.ipynb
@@ -1038,6 +1038,13 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Propuesto: Resolver el problema del desbalance de clases en nuestra target"
+   ]
   }
  ],
  "metadata": {
